--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,6 +1,6 @@
 // * Стили компонента Buton (Load more)
 
-.Button {
+.ButtonLoadMore {
   padding: 8px 16px;
   border-radius: 2px;
   background-color: #3f51b5;
@@ -21,7 +21,7 @@
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
-.Button:hover,
-.Button:focus {
+.ButtonLoadMore:hover,
+.ButtonLoadMore:focus {
   background-color: #303f9f;
 }
