--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -46,14 +46,14 @@
 }
 
 .SearchFormButtonLabel {
-  position: absolute;
+  // position: absolute;
   width: 1px;
   height: 1px;
   padding: 0;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
-  clip-path: inset(50%);
+  // clip-path: inset(50%);
   border: 0;
 }
 
