--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,10 +1,10 @@
 /*
  * Стили компонента App
  */
- .App {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 16px;
-    padding-bottom: 24px;
+//  .App {
+//     // display: grid;
+//     // grid-template-columns: 1fr;
+//     // grid-gap: 16px;
+//     // padding-bottom: 24px;
     
-  }
+//   }
