--- a/src/components/Searchbar/Searchbar.module.scss
+++ b/src/components/Searchbar/Searchbar.module.scss
@@ -4,7 +4,7 @@
  .Searchbar {
   top: 0;
   left: 0;
-  width: 100vh;
+  // width: 100vh;
 
   position: sticky;
   z-index: 1100;
@@ -42,6 +42,7 @@
   font-size: 20px;
   border: none;
   outline: none;
+  margin-left: 30px;
   padding-left: 4px;
   padding-right: 4px;
 }
